--- a/qxnw/trunk/Manifest.json
+++ b/qxnw/trunk/Manifest.json
@@ -5,12 +5,12 @@
                 "name": "qxnw",
                 "summary": "Full library for qooxdoo",
                 "description": "The NW library for qooxdoo",
-                "homepage": "https://www.gruponw.com",
+                "homepage": "https://www.HCY.com",
                 "license": "MIT license",
                 "authors": [
                     {
                         "name": "Andres Florez",
-                        "email": "direccion@gruponw.com"
+                        "email": "direccion@hcy.com"
                     }
                 ],
 
