--- a/qxnw/trunk/Manifest.json
+++ b/qxnw/trunk/Manifest.json
@@ -9,7 +9,7 @@
                 "license": "MIT license",
                 "authors": [
                     {
-                        "name": "Andres Florez",
+                        "name": "Humberto Condon",
                         "email": "direccion@hcy.com"
                     }
                 ],
