--- a/movilmove/movilmove/nbproject/private/private.properties
+++ b/movilmove/movilmove/nbproject/private/private.properties
@@ -3,4 +3,4 @@ copy.src.on.open=false
 copy.src.target=/var/www/movilmove
 index.file=
 run.as=LOCAL
-url=http://localhost/movilmove/
+url=http://localhost/tranist/
